<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/merah2"
    tools:context=".ModelFragment">

    <!-- CardView yang berisi konten -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Fitur 1 -->
                <LinearLayout
                    android:id="@+id/section1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/background_rounded_corners"
                    android:padding="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Age"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desc7"
                        android:textColor="#0F0F10"
                        android:textSize="14sp"
                        android:layout_marginBottom="16dp"/>

                </LinearLayout>

                <!-- Fitur 2 -->
                <LinearLayout
                    android:id="@+id/section2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/background_rounded_corners"
                    android:padding="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sex"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desc8"
                        android:textColor="#0F0F10"
                        android:textSize="14sp"
                        android:layout_marginBottom="16dp"/>

                </LinearLayout>

                <!-- Fitur 3 -->
                <LinearLayout
                    android:id="@+id/section3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/background_rounded_corners"
                    android:padding="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Cp"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desc9"
                        android:textColor="#0F0F10"
                        android:textSize="14sp"
                        android:layout_marginBottom="16dp"/>

                </LinearLayout>

                <!-- Fitur 4 -->
                <LinearLayout
                    android:id="@+id/section4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/background_rounded_corners"
                    android:padding="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Trtbps"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desc10"
                        android:textColor="#0F0F10"
                        android:textSize="14sp"
                        android:layout_marginBottom="16dp"/>

                </LinearLayout>

                <!-- Fitur 5 -->
                <LinearLayout
                    android:id="@+id/section5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/background_rounded_corners"
                    android:padding="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Chol"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desc11"
                        android:textColor="#0F0F10"
                        android:textSize="14sp"
                        android:layout_marginBottom="16dp"/>

                </LinearLayout>

                <!-- Fitur 6 -->
                <LinearLayout
                    android:id="@+id/section6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/background_rounded_corners"
                    android:padding="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Fbs"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desc12"
                        android:textColor="#0F0F10"
                        android:textSize="14sp"
                        android:layout_marginBottom="16dp"/>

                </LinearLayout>

                <!-- Fitur 7 -->
                <LinearLayout
                    android:id="@+id/section7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/background_rounded_corners"
                    android:padding="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Restecg"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desc13"
                        android:textColor="#0F0F10"
                        android:textSize="14sp"
                        android:layout_marginBottom="16dp"/>

                </LinearLayout>

                <!-- Fitur 8 -->
                <LinearLayout
                    android:id="@+id/section8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/background_rounded_corners"
                    android:padding="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Thalachh"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width ="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desc14"
                        android:textColor="#0F0F10"
                        android:textSize="14sp"
                        android:layout_marginBottom="16dp"/>

                </LinearLayout>

                <!-- Fitur 9 -->
                <LinearLayout
                    android:id="@+id/section9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/background_rounded_corners"
                    android:padding="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Exng"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desc15"
                        android:textColor="#0F0F10"
                        android:textSize="14sp"
                        android:layout_marginBottom="16dp"/>

                </LinearLayout>

                <!-- Fitur 10 -->
                <LinearLayout
                    android:id="@+id/section10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/background_rounded_corners"
                    android:padding="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Oldpeak"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desc16"
                        android:textColor="#0F0F10"
                        android:textSize="14sp"
                        android:layout_marginBottom="16dp"/>

                </LinearLayout>

                <!-- Fitur 11 -->
                <LinearLayout
                    android:id="@+id/section11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/background_rounded_corners"
                    android:padding="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Slp"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desc17"
                        android:textColor="#0F0F10"
                        android:textSize="14sp"
                        android:layout_marginBottom="16dp"/>

                </LinearLayout>

                <!-- Fitur 12 -->
                <LinearLayout
                    android:id="@+id/section12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/background_rounded_corners"
                    android:padding="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Caa"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desc18"
                        android:textColor="#0F0F10"
                        android:textSize="14sp"
                        android:layout_marginBottom="16dp"/>

                </LinearLayout>

                <!-- Fitur 13 -->
                <LinearLayout
                    android:id="@+id/section13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/background_rounded_corners"
                    android:padding="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Thall"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desc19"
                        android:textColor="#0F0F10"
                        android:textSize="14sp"
                        android:layout_marginBottom="16dp"/>

                </LinearLayout>

                <!-- Fitur 14 -->
                <LinearLayout
                    android:id="@+id/section14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/background_rounded_corners"
                    android:padding="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Output"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desc20"
                        android:textColor="#0F0F10"
                        android:textSize="14sp"
                        android:layout_marginBottom="16dp"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>