<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/merah2"
    tools:context=".ModelFragment">

    <!-- CardView yang berisi konten -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Bagian 1 -->
            <LinearLayout
                android:id="@+id/section1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/pink1"
                android:padding="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nama Dataset"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desc21"
                    android:textAlignment="center"
                    android:textColor="#0F0F10"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>

            <!-- Garis pemisah -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <!-- Bagian 2 -->
            <LinearLayout
                android:id="@+id/section2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/pink1"
                android:padding="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Penjelasan Dataset"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/desc5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desc22"
                    android:textAlignment="center"
                    android:textColor="#0F0F10"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>

            <!-- Garis pemisah -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <!-- Bagian 3 -->
            <LinearLayout
                android:id="@+id/section3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/pink1"
                android:padding="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Jumlah data dan fitur"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/desc6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desc23"
                    android:textAlignment="center"
                    android:textColor="#0F0F10"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>

            <!-- Garis pemisah -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <!-- Bagian 4 -->
            <LinearLayout
                android:id="@+id/section4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/pink1"
                android:padding="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/title4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sumber Dataset"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/desc7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desc24"
                    android:autoLink="web"
                    android:textColorLink="@android:color/holo_blue_dark"
                    android:textAlignment="center"
                    android:textColor="#0F0F10"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
